--- a/jaz-users/users-data-updater/settings.gradle
+++ b/jaz-users/users-data-updater/settings.gradle
@@ -1,6 +1,2 @@
 rootProject.name = 'users-data-updater'
-
-include 'users-random-api-client'
-project(':users-random-api-client').projectDir = new File(settingsDir,'../users-random-api-client')
-include 'users-data'
-project(':users-data').projectDir = new File(settingsDir,'../users-data')
+// This module is included from the root multi-module build (../settings.gradle).
