--- a/jaz-users/users-web-api/build.gradle
+++ b/jaz-users/users-web-api/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.ehcache:ehcache:3.10.0'
 
 
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
