--- a/jaz-users/users-web-api/src/main/resources/application.properties
+++ b/jaz-users/users-web-api/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=users-web-api
 
-spring.datasource.url=jdbc:mysql://localhost:3306/users_data
+spring.datasource.url=jdbc:mariadb://localhost:3306/users_data
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.username=pjwstk
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql=true
 
 server.port=8181
